--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 					</div>
 				</div>
 				<div class="info">
-					Explore what Toronto's streetcar infrastructure looked like during its peak in 1945 through an interactive map.
+					Explore what Toronto's streetcar infrastructure looked like during its peak in 1945 through an interactive map. Click on a line for more information.
 				</div>
 				<div class="start">
 					[ click anywhere to begin... ]
