--- a/index.html
+++ b/index.html
@@ -18,11 +18,14 @@
 					</div>
 				</div>
 				<div class="info">
-					Explore what Toronto's streetcar infrastructure looked like during its peak in 1945 through an interactive map. Click on a line for more information.
+					Explore what Toronto's streetcar infrastructure looked like during its peak in 1945 through an interactive map.
+				</div>
+				<div class="small">
+					(clicking a line offers more information)
 				</div>
 				<div class="start">
-					[ click anywhere to begin... ]
-				</div>
+						[ click anywhere to begin... ]
+					</div>
 			</div>
 		</div>
 
